@@ -38,7 +38,10 @@ import org.apache.cassandra.utils.FBUtilities;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertThat;
 import static org.junit.Assert.assertTrue;
+import static org.junit.Assert.fail;
+import static org.junit.matchers.JUnitMatchers.containsString;
 
 public class RepairOptionTest
 {
@@ -59,7 +62,7 @@ public class RepairOptionTest
         assertFalse(option.isPrimaryRange());
         assertFalse(option.isIncremental());
 
-        // parse everything
+        // parse everything except hosts (hosts cannot be combined with data centers)
         Map<String, String> options = new HashMap<>();
         options.put(RepairOption.PARALLELISM_KEY, "parallel");
         options.put(RepairOption.PRIMARY_RANGE_KEY, "false");
@@ -67,7 +70,6 @@ public class RepairOptionTest
         options.put(RepairOption.RANGES_KEY, "0:10,11:20,21:30");
         options.put(RepairOption.COLUMNFAMILIES_KEY, "cf1,cf2,cf3");
         options.put(RepairOption.DATACENTERS_KEY, "dc1,dc2,dc3");
-        options.put(RepairOption.HOSTS_KEY, "127.0.0.1,127.0.0.2,127.0.0.3");
 
         option = RepairOption.parse(options, partitioner);
         assertTrue(option.getParallelism() == RepairParallelism.PARALLEL);
@@ -92,11 +94,38 @@ public class RepairOptionTest
         expectedDCs.add("dc3");
         assertEquals(expectedDCs, option.getDataCenters());
 
+        // expect an error when parsing with hosts as well
+        options.put(RepairOption.HOSTS_KEY, "127.0.0.1,127.0.0.2,127.0.0.3");
+        assertParseThrowsIllegalArgumentExceptionWithMessage(options, "Cannot combine -dc and -hosts options");
+
+        // remove data centers to proceed with testing parsing hosts
+        options.remove(RepairOption.DATACENTERS_KEY);
+        option = RepairOption.parse(options, partitioner);
+
         Set<String> expectedHosts = new HashSet<>(3);
         expectedHosts.add("127.0.0.1");
         expectedHosts.add("127.0.0.2");
         expectedHosts.add("127.0.0.3");
         assertEquals(expectedHosts, option.getHosts());
+    }
+
+    @Test
+    public void testPullRepairParseOptions()
+    {
+        Map<String, String> options = new HashMap<>();
+
+        options.put(RepairOption.PULL_REPAIR_KEY, "true");
+        assertParseThrowsIllegalArgumentExceptionWithMessage(options, "Pull repair can only be performed between two hosts");
+
+        options.put(RepairOption.HOSTS_KEY, "127.0.0.1,127.0.0.2,127.0.0.3");
+        assertParseThrowsIllegalArgumentExceptionWithMessage(options, "Pull repair can only be performed between two hosts");
+
+        options.put(RepairOption.HOSTS_KEY, "127.0.0.1,127.0.0.2");
+        assertParseThrowsIllegalArgumentExceptionWithMessage(options, "Token ranges must be specified when performing pull repair");
+
+        options.put(RepairOption.RANGES_KEY, "0:10");
+        RepairOption option = RepairOption.parse(options, Murmur3Partitioner.instance);
+        assertTrue(option.isPullRepair());
     }
 
     @Test
@@ -108,5 +137,18 @@ public class RepairOptionTest
         ro = RepairOption.parse(ImmutableMap.of(RepairOption.INCREMENTAL_KEY, "true", RepairOption.RANGES_KEY, ""),
                 Murmur3Partitioner.instance);
         assertTrue(ro.isGlobal());
+    }
+
+    private void assertParseThrowsIllegalArgumentExceptionWithMessage(Map<String, String> optionsToParse, String expectedErrorMessage)
+    {
+        try
+        {
+            RepairOption.parse(optionsToParse, Murmur3Partitioner.instance);
+            fail(String.format("Expected RepairOption.parse() to throw an IllegalArgumentException containing the message '%s'", expectedErrorMessage));
+        }
+        catch (IllegalArgumentException ex)
+        {
+            assertThat(ex.getMessage(), containsString(expectedErrorMessage));
+        }
     }
 }
